--- a/requirements.txt
+++ b/requirements.txt
@@ -39,20 +39,20 @@ pygpu=0.7.6=py36_0
 python=3.6.5=1
 python-dateutil=2.7.3=py_0
 pytz=2018.5=py_0
-pyyaml=3.12=py36_1
+pyyaml=4.2b1=py36_1
 readline=7.0=0
 scipy=1.1.0=py36_blas_openblashd3ea46f_201
 setuptools=40.0.0=py36_0
 six=1.11.0=py36_1
 sqlite=3.20.1=2
 system=5.8=2
-tensorboard=1.8.0=py36_1
+tensorboard>=1.15=py36_1
 tensorflow=1.8.0=py36_1
 termcolor=1.1.0=py_2
 theano=1.0.2=py36_0
 tk=8.6.8=0
 webencodings=0.5=py36_0
-werkzeug=0.14.1=py_0
+werkzeug>=0.15.3
 wheel=0.31.1=py36_0
 xz=5.2.3=0
 yaml=0.1.7=0
